Added essote logo

--- a/views/index.jade
+++ b/views/index.jade
@@ -37,12 +37,8 @@ html
         br
         br
         div(class='row')
-          div(class='col-lg-3')
-          div(class='col-lg-3')
-            img(class='img-responsive center-block', src=root+'/img/mkl.png', style="max-width:300px; margin-top:40px;")
-          div(class='col-lg-3')
-            img(class='img-responsive center-block', src=root+'/img/lupaus.png', style="max-width:300px;-ms-transform: rotate(20deg);-webkit-transform: rotate(20deg);transform: rotate(20deg);")
-          div(class='col-lg-3')
+          div(class='col-lg-12')
+            img(class='img-responsive center-block', src=root+'/img/essote_loho.png', style="max-width:300px; margin-top:40px;")
         br
         br
         a(style='font-size:10px; color:white;' href=root+'/img/Tietosuojaseloste.pdf') tietosuojaseloste
