Fixed logo path

--- a/views/index.jade
+++ b/views/index.jade
@@ -38,10 +38,8 @@ html
         br
         div(class='row')
           div(class='col-lg-12')
-            img(class='img-responsive center-block', src=root+'/img/essote_loho.png', style="max-width:300px; margin-top:40px;")
+            img(class='img-responsive center-block', src=root+'/img/essote_logo.png', style="max-width:300px; margin-top:40px;")
         br
-        br
-        a(style='font-size:10px; color:white;' href=root+'/img/Tietosuojaseloste.pdf') tietosuojaseloste
       br
       div(style='display:none', class='loader-container')
         img(src=root+'/img/loader.gif', class='center-block')
