--- a/views/statistics.jade
+++ b/views/statistics.jade
@@ -11,6 +11,7 @@ block content
     span(id='allFlagCount')
   p Ilmoituksia käsitelty:&nbsp;
     span(id='ProcessedCount')
+  div(id='month-count')
   div(id='plot-container', style='height:500px;')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.min.js')
   script(src=root+'/script/jquery.flot.min.js')
