--- a/public/stylesheet/common.css
+++ b/public/stylesheet/common.css
@@ -7,6 +7,14 @@ body {
 	background: #F5F5F5 !important;
 }
 
+.table-container {
+  overflow-x: auto;
+}
+
+.statistics-container {
+  padding-top: 20px;
+}
+
 /*
  * Sidebar
  */
