--- a/views/index.jade
+++ b/views/index.jade
@@ -25,9 +25,9 @@ html
     div(id='main-index-container' class='container text-center')
       h1(class='page-title') Pyydä apua!
       div(class='info-container')
-        p Tarvitsetko apua tai tukea nykyisessä elämäntilanteessasi?
+        p Perheneuvo on lapsiperheiden yhteydenottokanava tilanteissa, joissa perhe ei tiedä mistä apu tai tuki tulee.
           br
-          p Kysymyksesi voi liittyä oman perheesi, ystäväsi tai muun perheen tilanteeseen. Voit ilmaista huolesi ja pyytää apua tällä lomakkeella. Lomakkeen vastaanottaa Perheneuvon tiimin jäsenet, jotka ottavat yhteyttä sinuun tai ilmoittamaasi perheeseen. Kirjoita lomakkeelle tietoja lapsesta/perheestä ja huolenkuvaus. Tiedot ovat luottamuksellisia. Varhaisella avuntarpeen tunnistamisella pyritään tukemaan perheiden hyvinvointia ja auttamaan arjessa selviytymistä.
+          p Kysymyksesi voi liittyä oman perheesi, ystäväsi tai muun perheen tilanteeseen. Voit ilmaista huolesi ja pyytää apua tällä lomakkeella. Lomakkeen vastaanottaa Perheneuvon moniammatillisen tiimin jäsenet, jotka ottavat yhteyttä sinuun tai ilmoittamaasi perheeseen. Kirjoita lomakkeelle tietoja lapsesta/perheestä ja huolenkuvaus. Tiedot ovat luottamuksellisia. Varhaisella avuntarpeen tunnistamisella pyritään tukemaan perheiden hyvinvointia ja auttamaan arjessa selviytymistä.
           br
           br
           | 
@@ -37,8 +37,12 @@ html
         br
         br
         div(class='row')
-          div(class='col-lg-12')
+          div(class='col-lg-2')
+          div(class='col-lg-4')
             img(class='img-responsive center-block', src=root+'/img/essote_logo.png', style="max-width:300px; margin-top:40px;")
+          div(class='col-lg-4')
+            img(class='img-responsive center-block', src=root+'/img/mikkeli_logo.jpg', style="max-width:300px; margin-top:40px;")
+          div(class='col-lg-2')
         br
       br
       div(style='display:none', class='loader-container')
